--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,20 +5,31 @@
 <table>
   <thead>
     <tr>
-      <th>Title</th>
+      <th>All Books</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
+    <table>
+      <tr>
+        <th><strong>Title</strong></th>
+        <th><strong>Author</strong></th>
+        <th><strong>Price</strong></th>
+        <th><strong>Published Date</strong></th>
+      </tr>
     <% @books.each do |book| %>
       <tr>
         <td><%= book.title %></td>
-        <td><%= link_to 'Show', book %></td>
-        <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= book.author %></td>
+        <td><%= number_to_currency(book.price) %></td>
+        <td><%= book.published_date %></td>
+        <td>
+          <%= link_to 'Show', book %> <%= link_to 'Edit', edit_book_path(book) %> <%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
+    </table>
   </tbody>
 </table>
 
