--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,13 +5,13 @@
 <table>
   <thead>
     <tr>
-      <th>All Books</th>
+      <th class="caption">All Books</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <table>
+    <table class="books-table">
       <tr>
         <th><strong>Title</strong></th>
         <th><strong>Author</strong></th>
@@ -25,7 +25,7 @@
         <td><%= number_to_currency(book.price) %></td>
         <td><%= book.published_date %></td>
         <td>
-          <%= link_to 'Show', book %> <%= link_to 'Edit', edit_book_path(book) %> <%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %>
+          <%= link_to 'Show', book %> <%= link_to 'Edit', edit_book_path(book) %> <%= link_to 'Destroy', book, method: :delete, data: { confirm: "About to permanently delete #{book.title}. Are you sure?" } %>
         </td>
       </tr>
     <% end %>
