--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= form.label :price %>
-    <%= form.number_field :price, value: number_with_precision(:price, :precision => 2), min: 0.00, step: 0.01, placeholder: "0.00" %>
+    <%= form.number_field :price, step: 0.01 %>
   </div>
 
   <div class="field">
