--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', book: @book %>
 
-<%= link_to 'Show', @book %> |
-<%= link_to 'Back', books_path %>
+<%= link_to 'Show', @book, class: 'btn show-btn' %> |
+<%= link_to 'Home', books_path, class: 'btn back-btn' %>
