--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,27 +12,32 @@
 
   <tbody>
     <table class="books-table">
-      <tr>
-        <th><strong>Title</strong></th>
-        <th><strong>Author</strong></th>
-        <th><strong>Price</strong></th>
-        <th><strong>Published Date</strong></th>
-      </tr>
-    <% @books.each do |book| %>
-      <tr>
-        <td><%= book.title %></td>
-        <td><%= book.author %></td>
-        <td><%= number_to_currency(book.price) %></td>
-        <td><%= book.published_date %></td>
-        <td>
-          <%= link_to 'Show', book %> <%= link_to 'Edit', edit_book_path(book) %> <%= link_to 'Destroy', book, method: :delete, data: { confirm: "About to permanently delete #{book.title}. Are you sure?" } %>
-        </td>
-      </tr>
-    <% end %>
+      <thead>
+        <tr>
+          <th><strong>Title</strong></th>
+          <th><strong>Author</strong></th>
+          <th><strong>Price</strong></th>
+          <th><strong>Published Date</strong></th>
+          <th>Edit</th>
+        </tr>
+      </thead>
+      <tbody>
+      <% @books.each do |book| %>
+        <tr>
+          <td><%= book.title %></td>
+          <td><%= book.author %></td>
+          <td><%= number_to_currency(book.price) %></td>
+          <td><%= book.published_date %></td>
+          <td>
+            <%= link_to 'Show', book, class: 'btn show-btn' %> <%= link_to 'Edit', edit_book_path(book), class: 'btn edit-btn' %> <%= link_to 'Destroy', book, class: 'btn destroy-btn', method: :delete, data: { confirm: "About to permanently delete #{book.title}. Are you sure?" } %>
+          </td>
+        </tr>
+      <% end %>
+      </tbody>
     </table>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Book', new_book_path %>
+<%= link_to 'New Book', new_book_path, class: 'btn new-btn' %>
