--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,5 +17,5 @@
   <%= @book.published_date %>
 </p>
 
-<%= link_to 'Edit', edit_book_path(@book) %> |
-<%= link_to 'Back', books_path %>
+<%= link_to 'Edit', edit_book_path(@book), class: 'btn edit-btn' %> |
+<%= link_to 'Home', books_path, class: 'btn back-btn' %>
